kubernetesExample/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: justdoit-example
  namespace: justdoit-example
spec:
  ports:
  - name: '80'
    port: 80
    targetPort: 8080
  selector:
    app: justdoit-example
status:
  loadBalancer: {}
