kubernetesExample/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: justdoit-example
  namespace: justdoit-example
spec:
  rules:
  - host: justdoit.example.com
    http:
      paths:
      - backend:
          serviceName: justdoit-example
          servicePort: 80
        path: /
  # tls:
  # - hosts:
  #   - justdoit.example.com
  #   secretName: justdoit-example-tls
